<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTab2"
    tools:context=".FormDataPemesan">

    <RelativeLayout
        android:id="@+id/kotak"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="#BFffffff"
        android:elevation="4dp"
        android:paddingTop="15dp"
        android:orientation="vertical"
        android:padding="20dp">


        <ScrollView
            android:paddingTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="50dp">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Input Data dengan Benar"
                android:textStyle="bold"
                android:layout_below="@+id/image12"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_username"
                android:paddingTop="3dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtnamalengkap"
                    android:layout_width="300dp"
                    android:layout_height="43dp"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/hint_namalengkap"
                    android:layout_marginTop="8dp"
                    android:singleLine="true"
                    android:inputType="none"
                    android:editable="false"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAbuabu"
                    android:textSize="20dp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtemail"
                    android:layout_width="300dp"
                    android:layout_height="43dp"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_email1"
                    android:inputType="none"
                    android:editable="false"
                    android:singleLine="true"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAbuabu"
                    android:textSize="20dp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txttelepon"
                    android:layout_width="300dp"
                    android:layout_height="43dp"
                    android:layout_alignLeft="@+id/txtuser"
                    android:layout_alignStart="@+id/txtuser"
                    android:layout_below="@+id/txtuser"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="@string/hint_notelpon"
                    android:singleLine="true"
                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAbuabu"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_telepon"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtalamat"
                    android:layout_width="300dp"
                    android:layout_height="43dp"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/hint_alamatanda"
                    android:inputType="text"
                    android:singleLine="true"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAbuabu"
                    android:textSize="20dp"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/txttanggalbooking"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="none"
                    android:editable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/hint_tanggalpesan"
                    />


            </LinearLayout>



            <LinearLayout
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/txtjumlahbaju"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_jumlahbaju"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="" />

                <Button
                    android:id="@+id/btncekharga"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:background="@color/colorAccent"
                    android:elevation="9dp"
                    android:layout_weight="1"
                    android:text="Cek Harga"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Jumlah yang harus dibayar"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"/>

            <TextView
                android:layout_gravity="center"
                android:id="@+id/jumlahharga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rp0"
                android:textStyle="italic|bold"
                android:textColor="@color/colormerah"
                android:textSize="21sp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_keterangan"
                android:paddingBottom="50dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtketerangan"
                    android:layout_width="300dp"
                    android:layout_height="43dp"
                    android:layout_below="@+id/imageView"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/hint_keterangan"
                    android:inputType="text"

                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorBlack"
                    android:textColorHint="@color/colorAbuabu"
                    android:textSize="20dp"/>
            </android.support.design.widget.TextInputLayout>




            <Button
                android:id="@+id/btnimage"
                android:layout_width="230dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:background="@color/colorAccent"
                android:text="Pilih Gambar Baju"
                android:textColor="@color/colorPutih" />


            <ImageView
                android:id="@+id/image"
                android:paddingBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <Button
                android:id="@+id/btnpesan"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="285dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colormerah"
                android:elevation="10dp"
                android:paddingLeft="50dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_below="@id/kotak"
                android:paddingRight="50dp"
                android:text="Pesan Sekarang"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold" />


        </LinearLayout>

        </ScrollView>
    </RelativeLayout>




</RelativeLayout>